# nexus_4wd_mecanum_simulator

UWB_plugin/: CMakeLists.txt
UWB_plugin/config/: README.md
UWB_plugin/config/iris_uwb/: iris_uwb.sdf  model.config
UWB_plugin/src/: UwbPlugin.cpp
gtec_msgs/: CMakeLists.txt
nexus_4wd_mecanum_description/launch/: nexus_4wd_mecanum_description.launch
nexus_4wd_mecanum_description/urdf/: imu.xacro  livox_mid360.xacro  nexus_4wd_mecanum.gazebo  nexus_4wd_mecanum.xacro
nexus_4wd_mecanum_gazebo/: mr_gazebo.rviz
nexus_4wd_mecanum_gazebo/include/nexus_4wd_mecanum_gazebo/: nexus_ros_force_based_move.h
nexus_4wd_mecanum_gazebo/launch/: nexus_4wd_mecanum_multi.launch  nexus_4wd_mecanum_world.launch  spawn_one_nexus_4wd_mecanum.launch
nexus_4wd_mecanum_gazebo/src/: nexus_ros_force_based_move.cpp
nexus_4wd_mecanum_gazebo/worlds/: cube_cylinder.world
